--- a/EagleEatsMaster/EagleEatsMaster.csproj
+++ b/EagleEatsMaster/EagleEatsMaster.csproj
@@ -239,6 +239,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="IMG\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
