Style.css - rename
update the .css file

--- a/EagleEatsMaster/EagleEatsMaster.csproj
+++ b/EagleEatsMaster/EagleEatsMaster.csproj
@@ -99,7 +99,7 @@
     <Content Include="Scripts\jquery-3.6.0.min.js" />
     <Content Include="Scripts\jquery-3.6.0.slim.js" />
     <Content Include="Scripts\jquery-3.6.0.slim.min.js" />
-    <Content Include="style.css" />
+    <Content Include="Style.css" />
     <Content Include="User.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
